--- a/src/com/gestion/view/Application.fxml
+++ b/src/com/gestion/view/Application.fxml
@@ -7,118 +7,81 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="593.0" prefWidth="767.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<AnchorPane fx:id="acMain" prefHeight="593.0" prefWidth="767.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gestion.view.ApplicationController">
    <children>
       <StackPane prefHeight="593.0" prefWidth="767.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <BorderPane prefHeight="200.0" prefWidth="200.0">
-               <center>
-                  <BorderPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-                     <top>
-                        <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
-                     </top>
-                     <center>
-                        <StackPane prefHeight="150.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
-                     </center>
-                  </BorderPane>
-               </center>
+            <BorderPane fx:id="acDashBord" prefHeight="200.0" prefWidth="200.0">
                <left>
                   <AnchorPane prefHeight="593.0" prefWidth="137.0" BorderPane.alignment="CENTER">
                      <children>
-                        <ScrollPane prefHeight="593.0" prefWidth="138.0">
+                        <ScrollPane prefHeight="593.0" prefWidth="131.0">
                            <content>
                               <AnchorPane>
                                  <children>
-                                    <Text fill="#cc3535" layoutX="8.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="DashBord">
+                                    <Text fill="#cc3535" layoutX="8.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="LogiServ" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="10.0">
                                        <font>
                                           <Font name="System Bold Italic" size="21.0" />
                                        </font>
                                     </Text>
-                                    <ImageView fitHeight="5.0" fitWidth="114.0" layoutX="45.0" layoutY="124.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@../../../../../StoreKeeper/src/icon/btnBreak.png" />
-                                       </image>
-                                    </ImageView>
-                                    <Button fx:id="btnHome" contentDisplay="TOP" layoutY="42.0" mnemonicParsing="false" onAction="#btnHomeOnClick" prefHeight="78.0" prefWidth="127.0" text="Home">
-                                       <graphic>
-                                          <ImageView fx:id="imgHomeBtn" fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
-                                             <image>
-                                                <Image url="@../../../../../StoreKeeper/src/icon/home.png" />
-                                             </image>
-                                          </ImageView>
-                                       </graphic>
-                                    </Button>
-                                    <ImageView fitHeight="5.0" fitWidth="114.0" layoutX="45.0" layoutY="215.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@../../../../../StoreKeeper/src/icon/btnBreak.png" />
-                                       </image>
-                                    </ImageView>
-                                    <Button fx:id="btnStore" contentDisplay="TOP" layoutY="133.0" mnemonicParsing="false" onAction="#btnStoreOnClick" prefHeight="78.0" prefWidth="127.0" text="Store">
-                                       <graphic>
-                                          <ImageView fx:id="imgStoreBtn" fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
-                                             <image>
-                                                <Image url="@../../../../../StoreKeeper/src/icon/stock.png" />
-                                             </image>
-                                          </ImageView>
-                                       </graphic>
-                                    </Button>
-                                    <Button fx:id="btnEmplopye" contentDisplay="TOP" layoutY="316.0" mnemonicParsing="false" onAction="#btnEmplopyeOnClick" prefHeight="78.0" prefWidth="127.0" text="Employe">
-                                       <graphic>
-                                          <ImageView fx:id="imgEmployeBtn" fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
-                                             <image>
-                                                <Image url="@../../../../../StoreKeeper/src/icon/employe.png" />
-                                             </image>
-                                          </ImageView>
-                                       </graphic>
-                                    </Button>
-                                    <ImageView fitHeight="5.0" fitWidth="114.0" layoutX="45.0" layoutY="309.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@../../../../../StoreKeeper/src/icon/btnBreak.png" />
-                                       </image>
-                                    </ImageView>
-                                    <ImageView fitHeight="5.0" fitWidth="114.0" layoutX="45.0" layoutY="398.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@../../../../../StoreKeeper/src/icon/btnBreak.png" />
-                                       </image>
-                                    </ImageView>
-                                    <Button fx:id="btnSell" contentDisplay="TOP" layoutY="225.0" mnemonicParsing="false" onAction="#btnSellOnClick" prefHeight="78.0" prefWidth="127.0" text="Sell">
-                                       <graphic>
-                                          <ImageView fx:id="imgSellBtn" fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
-                                             <image>
-                                                <Image url="@../../../../../StoreKeeper/src/icon/sell2.png" />
-                                             </image>
-                                          </ImageView>
-                                       </graphic>
-                                    </Button>
-                                    <ImageView fitHeight="5.0" fitWidth="114.0" layoutX="45.0" layoutY="578.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@../../../../../StoreKeeper/src/icon/btnBreak.png" />
-                                       </image>
-                                    </ImageView>
-                                    <Button fx:id="btnSettings" contentDisplay="TOP" layoutY="405.0" mnemonicParsing="false" onAction="#btnSettingsOnClick" prefHeight="78.0" prefWidth="127.0" text="Settings">
-                                       <graphic>
-                                          <ImageView fx:id="imgSettingsBtn" fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
-                                             <image>
-                                                <Image url="@../../../../../StoreKeeper/src/icon/settings.png" />
-                                             </image>
-                                          </ImageView>
-                                       </graphic>
-                                    </Button>
-                                    <ImageView fitHeight="5.0" fitWidth="114.0" layoutX="45.0" layoutY="489.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@../../../../../StoreKeeper/src/icon/btnBreak.png" />
-                                       </image>
-                                    </ImageView>
-                                    <Button fx:id="btnAbout" contentDisplay="TOP" layoutY="496.0" mnemonicParsing="false" onAction="#btnAboutOnClick" prefHeight="78.0" prefWidth="127.0" text="About">
-                                       <graphic>
-                                          <ImageView fx:id="imgAboutBtn" fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
-                                             <image>
-                                                <Image url="@../../../../../StoreKeeper/src/icon/about.png" />
-                                             </image>
-                                          </ImageView>
-                                       </graphic>
-                                    </Button>
+                                    <VBox layoutY="42.0" spacing="12.0">
+                                       <children>
+                                          <Button fx:id="btnHome" contentDisplay="TOP" layoutY="42.0" mnemonicParsing="false" onAction="#btnHomeOnClick" prefHeight="78.0" prefWidth="127.0" text="Home">
+                                             <graphic>
+                                                <ImageView fitHeight="49.0" fitWidth="54.0" pickOnBounds="true" preserveRatio="true">
+                                                   <image>
+                                                      <Image url="@../../../../resources/images/icon/Home.png" />
+                                                   </image>
+                                                </ImageView>
+                                             </graphic>
+                                          </Button>
+                                          <Button fx:id="btnCamiones" contentDisplay="TOP" layoutY="133.0" mnemonicParsing="false" onAction="#btnCamionesOnClick" prefHeight="78.0" prefWidth="127.0" text="Camiones">
+                                             <graphic>
+                                                <ImageView fx:id="imgCamionBtn" fitHeight="52.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
+                                                   <image>
+                                                      <Image url="@../../../../resources/images/icon/truck.png" />
+                                                   </image>
+                                                </ImageView>
+                                             </graphic>
+                                          </Button>
+                                          <Button fx:id="btnVentas" contentDisplay="TOP" layoutY="223.0" mnemonicParsing="false" onAction="#btnVentasOnClick" prefHeight="78.0" prefWidth="127.0" text="Ventas">
+                                             <graphic>
+                                                <ImageView fx:id="imgVentasBtn" fitHeight="51.0" fitWidth="68.0" pickOnBounds="true" preserveRatio="true">
+                                                   <image>
+                                                      <Image url="@../../../../resources/images/icon/sells.png" />
+                                                   </image>
+                                                </ImageView>
+                                             </graphic>
+                                          </Button>
+                                          <Button fx:id="btnCompras" contentDisplay="TOP" layoutY="310.0" mnemonicParsing="false" onAction="#btnComprasOnClick" prefHeight="78.0" prefWidth="127.0" text="Compras">
+                                             <graphic>
+                                                <ImageView fx:id="imgComprasBtn" fitHeight="56.0" fitWidth="59.0" pickOnBounds="true" preserveRatio="true">
+                                                   <image>
+                                                      <Image url="@../../../../resources/images/icon/compras.png" />
+                                                   </image>
+                                                </ImageView>
+                                             </graphic>
+                                          </Button>
+                                          <Button fx:id="btnEmployees" contentDisplay="TOP" layoutY="401.0" mnemonicParsing="false" onAction="#btnEmployeesOnClick" prefHeight="78.0" prefWidth="127.0" text="Employees">
+                                             <graphic>
+                                                <ImageView fx:id="imgEmployeesBtn" fitHeight="50.0" fitWidth="51.0" pickOnBounds="true" preserveRatio="true">
+                                                   <image>
+                                                      <Image url="@../../../../resources/images/icon/Account.png" />
+                                                   </image>
+                                                </ImageView>
+                                             </graphic>
+                                          </Button>
+                                          <Button fx:id="btnSettings" contentDisplay="TOP" layoutY="493.0" mnemonicParsing="false" onAction="#btnSettingsOnClick" prefHeight="78.0" prefWidth="127.0" text="Settings">
+                                             <graphic>
+                                                <ImageView fx:id="imgSettingsBtn" fitHeight="50.0" fitWidth="57.0" pickOnBounds="true" preserveRatio="true">
+                                                   <image>
+                                                      <Image url="@../../../../resources/images/icon/Settings.png" />
+                                                   </image>
+                                                </ImageView>
+                                             </graphic>
+                                          </Button>
+                                       </children>
+                                    </VBox>
                                  </children>
                               </AnchorPane>
                            </content>
@@ -126,6 +89,13 @@
                      </children>
                   </AnchorPane>
                </left>
+               <center>
+                  <StackPane prefHeight="150.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                     <children>
+                        <AnchorPane fx:id="appContent" prefHeight="200.0" prefWidth="200.0" />
+                     </children>
+                  </StackPane>
+               </center>
             </BorderPane>
          </children>
       </StackPane>
