--- a/src/com/gestion/view/Application.fxml
+++ b/src/com/gestion/view/Application.fxml
@@ -11,7 +11,7 @@
    <children>
       <StackPane prefHeight="593.0" prefWidth="767.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <BorderPane fx:id="acDashBord" prefHeight="200.0" prefWidth="200.0">
+            <BorderPane prefHeight="200.0" prefWidth="200.0">
                <left>
                   <AnchorPane prefHeight="593.0" prefWidth="137.0" BorderPane.alignment="CENTER">
                      <children>
